fixed a bug where portal element would spill out of bounds

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,10 @@
 	--font-sans: "";
 }
 
+.cdk-describedby-message-container {
+	display: none;
+}
+
 :root {
 	--background: 0 0% 100%;
 	--foreground: 20 14.3% 4.1%;
